# pygomx-test

./: .gitignore  Containerfile.debian  README.txt  compose.yaml
.github/workflows/: build.yaml  windows.yaml
libmxclient/: go.mod  go.sum  mxclientlib.go
libmxclient/determinant/mxpassfile/: mxpassfile.go  mxpassfile_test.go  readpassfile.go  readpassfile_unix.go
libmxclient/mxapi/: discover.go  login.go
libmxclient/mxclient/: client.go  utils.go
libmxclient/mxutils/: mxpass.go  utils.go
mxsmal/: .gitignore  README.txt  pyproject.toml  setup.py
mxsmal/src/demobot/: demobot.py
mxsmal/src/demobot/simple/: __init__.py  demobot.py
mxsmal/src/mxsmal/: app.py
mxsmal/src/mxsmal/simple/: bot.py
mxsmal/src/mxsmal/smalsetup/: __init__.py  smalsetup.py
mxsmal/src/pymxutils/mxutils/: __init__.py  accountinfo.py  clearaccount.py  click.py  discoverhs.py  logout.py  mktoken.py  passitem.py  serverinfo.py  whoami.py
pygomx/: .gitignore  build_ffi.py  libmxclient.def  pyproject.toml  setup.py
pygomx-module/: Makefile  README.txt  build_ffi.py  setup.py
pygomx/src/pygomx/: client.py  errors.py  pygomx.py
pygomx/src/pygomx/simple/: client.py
smal/: README  README.txt  pyproject.toml
smal/src/demobot/: demobot.py
smal/src/demobot/simple/: __main__.py  demobot.py
smal/src/pygomx/mxutils/: __init__.py  accountinfo.py  clearaccount.py  discoverhs.py  mktoken.py  serverinfo.py  whoami.py
smal/src/pymxutils/mxutils/: __init__.py  accountinfo.py  clearaccount.py  discoverhs.py  logout.py  mktoken.py  passitem.py  serverinfo.py  whoami.py
smal/src/smal/: app.py  bot.py  errors.py  pygomx.py
smal/src/smal/simple/: app.py  bot.py
smal/src/smal/smalsetup/: __main__.py  smalsetup.py
