[build-system]
requires = ["setuptools", "calver"]
build-backend = "setuptools.build_meta"

[project]
name = "mxsmal"
dynamic = ["version"]
requires-python = ">=3.10"
description = "smal - simple matrix application library"
authors = [{ name = "saces" }]
license = "AGPL-3.0-only"
readme = "README.txt"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

dependencies = [
    "asyncio",
    "cffi>=2.0.0",
    "click",
    "pygomx>=2026.4.4.9.9",
]

[tool.setuptools.package-dir]
"pymxutils" = "src/pymxutils"
"mxsmal" = "src/mxsmal"
"smbl" = "src/smbl"
"demobot" = "src/demobot"

[project.urls]
repository = "https://codeberg.org/saces/pygomx"

[project.scripts]
mxdiscover = "pymxutils.mxutils:discoverhs"
mxwhoami = "pymxutils.mxutils:whoami"
mxtoken = "pymxutils.mxutils:mktoken"
mxaccountinfo = "pymxutils.mxutils:accountinfo"
mxlogout = "pymxutils.mxutils:logout"
mxclearaccount = "pymxutils.mxutils:clearaccount"
mxserverinfo = "pymxutils.mxutils:serverinfo"
mxpassitem = "pymxutils.mxutils:passitem"
smalsetup = "mxsmal.smalsetup:smalsetup"
demobot = "demobot:main"
simplebot = "demobot.simple:main"
