[build-system]
requires = ["setuptools>=80", "cffi>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygomx"
version = "0.0.2"
requires-python = ">=3.10"
description = "python pindings for a golang matrix library"
license = "AGPL-3.0-only"
readme = "README.txt"

dependencies = ["asyncio", "cffi>=2.0.0"]

[project.urls]
homepage = "https://codeberg.org/saces/pygomx"
heimseite = "https://code.c-base.org/saces/pygomx"

[tool.setuptools.package-dir]
"pygomx" = "src/pygomx"
