[build-system]
requires = ["setuptools>=80", "cffi>=2.0.0", "calver"]
build-backend = "setuptools.build_meta"

[project]
name = "pygomx"
dynamic = ["version"]
requires-python = ">=3.10"
description = "python bindings for a golang matrix library"
license = "AGPL-3.0-only"
readme = "README.txt"

dependencies = ["asyncio", "cffi>=2.0.0"]

[project.urls]
homepage = "https://codeberg.org/saces/pygomx"
heimseite = "https://code.c-base.org/saces/pygomx"

[tool.setuptools.package-dir]
"pygomx" = "src/pygomx"

# Use delvewheel on windows
[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path . -w {dest_dir} {wheel}"
