[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smal"
version = "0.0.1"
requires-python = ">=3.11"
description = "smal - simple matrix application library"
authors = [{ name = "saces" }]
license = "AGPL-3.0-only"
readme = "README"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

[tool.setuptools.package-dir]
"pymxutils" = "src/pymxutils"
"smal" = "src/smal"
"smbl" = "src/smbl"

[project.urls]
repository = "https://codeberg.org/saces/pygomx"

[tool.distutils.egg_info]
egg_base = "/tmp"

[project.scripts]
mxdiscover = "pymxutils.mxutils:discoverhs"
mxwhoami = "pymxutils.mxutils:whoami"
mxtoken = "pymxutils.mxutils:mktoken"
mxaccountinfo = "pymxutils.mxutils:accountinfo"
mxclearaccount = "pymxutils.mxutils:clearaccount"
mxserverinfo = "pymxutils.mxutils:serverinfo"
smalsetup = "smal.smalsetup:smalsetup"
