[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smal"
version = "0.0.1"
requires-python = ">=3.10"
description = "smal - simple matrix application library"
authors = [{ name = "saces" }]
license = "AGPL-3.0-only"
readme = "README.txt"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

dependencies = [
    "asyncio",
    "cffi>=2.0.0",
    "click",
    "pygomx>=0.0.2"
]

[tool.setuptools.package-dir]
"pymxutils" = "src/pymxutils"
"smal" = "src/smal"
"smbl" = "src/smbl"
"demobot" = "src/demobot"

[project.urls]
repository = "https://codeberg.org/saces/pygomx"

[project.scripts]
mxdiscover = "pymxutils.mxutils:discoverhs"
mxwhoami = "pymxutils.mxutils:whoami"
mxtoken = "pymxutils.mxutils:mktoken"
mxaccountinfo = "pymxutils.mxutils:accountinfo"
mxclearaccount = "pymxutils.mxutils:clearaccount"
mxserverinfo = "pymxutils.mxutils:serverinfo"
smalsetup = "smal.smalsetup:smalsetup"
demobot = "demobot:main"
simplebot = "demobot.simple:main"
